End of section 22

--- a/client/src/app/shared/pager/pager.component.html
+++ b/client/src/app/shared/pager/pager.component.html
@@ -2,6 +2,7 @@
 [boundaryLinks]="true" 
 [totalItems]="totalCount"
 [itemsPerPage]="pageSize"
+[(ngModel)]="pageNumber"
 [maxSize]="10"
 (pageChanged)="onPagerChanged($event)"
 previousText="&lsaquo;" 
