--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -4,7 +4,9 @@
 
             <h5 class="text-warning ms-3">Sort</h5>
             <select class="form-select mb-4" (change)="onSortSelected($event)" >
-                <option *ngFor="let sort of sortOptions" [value]="sort.value">{{sort.name}}</option>
+                <option *ngFor="let sort of sortOptions" 
+                [value]="sort.value"
+                [selected]="shopParams.sort === sort.value">{{sort.name}}</option>
             </select>
 
             <h5 class="text-warning ms-3">Brands</h5>
@@ -51,6 +53,7 @@
                 <app-pager 
                 [totalCount]="totalCount"
                 [pageSize]="shopParams.pageSize"
+                [pageNumber]="shopParams.pageNumber"
                 (pageChanged)="onPageChanged($event)"></app-pager>
             </div>
         </section>
